Add wordcloud UI/functionality to layered type
todo: polarity type

--- a/templates/coming_soon.html
+++ b/templates/coming_soon.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>FMM - Coming Soon!</title>
+        <link rel="shortcut icon" href="{{ url_for('static', filename='resources/favicon.png') }}">
     </head>
     <body>
         <div>Coming Soon!</div>
