--- a/templates/graphs.html
+++ b/templates/graphs.html
@@ -3,6 +3,7 @@
     <head>
         <title>Graphs for {{ ', '.join(convo.get_people()).title() }}</title>
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='graphs.css') }}">
+        <link rel="shortcut icon" href="{{ url_for('static', filename='resources/favicon.png') }}">
     </head>
     <body>
         <div class="page_contents">
