--- a/templates/table.html
+++ b/templates/table.html
@@ -2,6 +2,7 @@
 <head>
     <title>FMM - Conversations</title>
     <link href="{{ url_for('static', filename='table.css') }}" rel="stylesheet">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='resources/favicon.png') }}">
 </head>
 <body>
     <div class="page-contents">
