--- a/static/word_clouds.css
+++ b/static/word_clouds.css
@@ -117,3 +117,13 @@ input.hide {
 *:focus {
     outline: none;
 }
+
+.separator {
+  font-family: 'Roboto', serif;
+  font-weight: bold;
+  color: #8E939C;
+  text-align: center;
+  font-size: 15px;
+  margin-top: 100px;
+  margin-bottom: -60px;
+}
