Update word_cloud UI to use lightbox2 for image preview
only for image-overlay shape, todo for layered type

--- a/static/word_clouds.css
+++ b/static/word_clouds.css
@@ -1,8 +1,15 @@
 /* Page design by Gokul Swamy: http://gok.cool */
+@font-face {
+    font-family: "Nunito-Light";
+    src: url("resources/nunito/Nunito-Light.ttf");
+}
+
 body {
     max-width: 1100px;
     margin: 10px auto;
+    font-family: "Nunito-Light";
 }
+
 input.hide {
     display: none;
 }
