Add gui launch on setup

--- a/templates/word_clouds.html
+++ b/templates/word_clouds.html
@@ -204,7 +204,7 @@ Page styling by Gokul Swamy: http://gok.cool
             <input id="submit" type="submit" value="👍" class="bottom-button" style="margin-top: 80px;">
         </div>
     </form>
-    <h1 style="margin: auto; text-align: center; display: none;">Creating word cloud!</h1>
+    <h1 style="margin: auto; text-align: center; display: none;">Creating your word cloud!</h1>
 
     <script src="{{ url_for('static', filename='jquery.js') }}"></script>
     <script src="{{ url_for('static', filename='lightbox.js') }}"></script>
